Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127679

error: no member named 'listen' in 'QHttpServer'

XMLWordPrintable

    • 5344ddea8 (dev), 0bec9f7af (6.8)

      /Users/qt/work/qt/qtapplicationmanager/src/tools/package-server/pshttpinterface.cpp:54:32: error: no member named 'listen' in 'QHttpServer'
          auto usedPort = d->server->listen(host, port);
                          ~~~~~~~~~  ^
      1 error generated.
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/aee7587164a32502a8f16b312a888a804bd3fcf1/MacOSMacOS_14arm64MacOSMacOS_14arm64Clangqtci-macos-14-arm-106-bd9a4cUseConfigure_WarningsAreErrors/d58f30fb3a2d9212dd94e70896b5517322355ff0/build_1722518352/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1722518252

      Tested changes (refs/builds/qtci/dev/1722518129):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/580354/2 Update dependencies on 'dev' in qt/qtapplicationmanager

        For Gerrit Dashboard: QTBUG-127679
        # Subject Branch Project Status CR V

            rgriebl Robert Griebl
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes