Adapt to qthttpserver API break in 6.8

Change-Id: Ifa70b1ba628f46f0993acf43df84052657862be2
Fixes: QTBUG-127679
Pick-to: 6.8
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>